# npu_plugin_btc

./: .gitignore  CMakeLists.txt  CODEOWNERS  README.md
include/: bitCompactor.h
include/utils/: logger.h  utils.h
src/: bitCompactor.cpp
src/utils/: logger.cpp
